about home section

--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -19,7 +19,6 @@
   </h1>
 </section>
 <!-- <div class="goal">
-  
   <h1>Developer</h1>
 </div> -->
 
@@ -131,6 +130,7 @@
       justify-content: flex-start;
       margin-top: var(--space-m);
       font-size: var(--step-1);
+      line-height: 2rem;
     }
     .title .position-last {
       grid-column: 1 / 2;
