--- a/src/components/Bio.astro
+++ b/src/components/Bio.astro
@@ -5,10 +5,10 @@
 <section class="intro">
   <h1 class="title">
     <span class="position">Frontend</span>
-    <a href="/projects" class="projects">
+    <!-- <a href="/projects" class="projects">
       <span class="button">Projects</span>
       <span class="arrow"> ⤍ </span>
-    </a>
+    </a> -->
     <span class="bio">
       Formed as a <strong>digital artist</strong> who specializes in a variety of
       disciplines, with an emphasis on <strong>performance</strong> and <strong
